<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>collision_alert_pkg</name>
  <version>0.0.0</version>
  <description>ROS2 csomag, amely egy távolságérzékelőt és egy ütközésjelző rendszert szimulál.</description>
  <maintainer email="marai.adam@hallgato.sze.hu">Marai Adam</maintainer>
  <license>GNU General Public License v3.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <exec_depend>ros2launch</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
